# MKPro

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  eslint.config.mjs  package-lock.json  package.json  tmp-inspect.mjs  tmp-logic2.mjs  tmp-sense.cjs  tmp-sense.mkpro  tmp-setup.mjs  tmp-trace.mjs  tsconfig.json  vitest.config.ts
docs/: 00-hardware.md  (+26 more)
native/: CMakeLists.txt
native/include/mkpro/: compiler.hpp  oracle.hpp  version.hpp
native/include/mkpro/core/: address_formula_solver.hpp  ast.hpp  compiler.hpp  compiler_behavior_digest.hpp  compiler_static_proof_gate.hpp  constant_folder.hpp  cyclic_end_return.hpp  dark_side_suffix_helper.hpp  feature_profile.hpp  flow_sensitive_call_domains.hpp  formal_address.hpp  format.hpp  helper_invariant_recall_hoist.hpp  helper_semantic_alias.hpp  indirect_addressing.hpp  int128.hpp  interprocedural_dse.hpp  interprocedural_value_propagation.hpp  ir.hpp  late_bound_decimal_selector.hpp  machine_profile.hpp  mk61_trig.hpp  natural_component_layout.hpp  natural_target_component_layout.hpp  opcodes.hpp  packed_bcd_popcount.hpp  parser.hpp  phase_selector_materializer.hpp  post_layout_control_flow.hpp  post_layout_indirect_flow.hpp  raw_bcd_unary_selector.hpp  register_allocator.hpp  result.hpp  return_stack_script.hpp  rule_cfg.hpp  rules.hpp  shared_helper_continuation.hpp  shared_helper_wrapper.hpp  stack_value_equivalence.hpp  state_banks.hpp  (+6 more)
native/include/mkpro/emulator/: mk61.hpp  rom.hpp
native/oracles/examples/: index.json
native/oracles/examples/99-bottles/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/alaram/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/basic/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/cave-highlevel-baseline/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/cave-sketch/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/cave-treasure/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/clock/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/dangerous-loading/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/dungeon/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/e-94-digits/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/fox-hunt-100/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/fox-hunt-mk61/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/functions-demo/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/game-100-pig/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/giants-country/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/oracles/examples/human/: bytes.txt  explain.txt  hex.txt  keys.txt  listing.txt  report.json  setup.txt  variants.txt
native/src/: main.cpp  oracle.cpp  stub_compiler.cpp
native/src/core/: address_formula_solver.cpp  ast_json.cpp  compiler.cpp  compiler_behavior_digest.cpp  constant_folder.cpp  cyclic_end_return.cpp  dark_side_suffix_helper.cpp  flow_sensitive_call_domains.cpp  formal_address.cpp  format.cpp  helper_invariant_recall_hoist.cpp  helper_semantic_alias.cpp  indirect_addressing.cpp  interprocedural_dse.cpp  interprocedural_value_propagation.cpp  ir.cpp  late_bound_decimal_selector.cpp  machine_profile.cpp  mk61_trig.cpp  mk61_trig_generated.cpp  natural_component_layout.cpp  natural_target_component_layout.cpp  opcodes.cpp  packed_bcd_popcount.cpp  parser.cpp  phase_selector_materializer.cpp  post_layout_control_flow.cpp  post_layout_indirect_flow.cpp  raw_bcd_unary_selector.cpp  register_allocator.cpp  return_stack_script.cpp  rule_cfg.cpp  rules.cpp  shared_helper_continuation.cpp  shared_helper_wrapper.cpp  state_banks.cpp  super_dark_layout.cpp  terminal_cyclic_layout.cpp  terminal_report_tail.cpp  terminal_retry_sentinel_plan.cpp  (+1 more)
native/src/emulator/: mk61.cpp  rom.cpp
native/tests/: address_formula_solver_test.cpp  arithmetic_if_pass_test.cpp  bank_walk_canonicalize_test.cpp  bit_mask_quotient_reuse_test.cpp  board_width_macros_test.cpp  branch_target_x_reuse_pass_test.cpp  callee_hole_helper_test.cpp  cfg_test.cpp  compiler_coord_list_test.cpp  compiler_display_test.cpp  compiler_test.cpp  computed_dispatch_test.cpp  constant_folding_test.cpp  counted_loop_unroll_test.cpp  cse_display_block_test.cpp  cyclic_end_return_test.cpp  dangerous_loading_size_report_test.cpp  dark_side_suffix_helper_test.cpp  dead_code_after_halt_test.cpp  dead_proc_elimination_test.cpp  dead_store_before_commutative_test.cpp  dead_store_elimination_test.cpp  display_byte_helper_test.cpp  display_lowering_test.cpp  duplicate_failure_tail_test.cpp  emitter_test.cpp  emulator_bitmask_facts_test.cpp  emulator_clock_test.cpp  emulator_constants_dual_use_test.cpp  emulator_display_byte_test.cpp  emulator_domain_error_guard_test.cpp  emulator_fl_counter_test.cpp  emulator_fox_hunt_100_test.cpp  emulator_fractional_r0_test.cpp  emulator_function_equivalence_test.cpp  emulator_functions_demo_test.cpp  emulator_grid_norm_test.cpp  emulator_hex_arithmetic_facts_test.cpp  emulator_if_chain_dispatch_test.cpp  emulator_indexed_packed_pow10_test.cpp  (+129 more)
native/tools/: address_solver.cpp  validate_mk61_trig.cpp
(+2049 files in other folders)
